plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version "9.1.0"
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'juliettdmovieproject'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.shell:spring-shell-starter:3.3.2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Utility task to combine decade JSON files and write a merged file
tasks.register('combineMovies', JavaExec) {
    group = 'utilities'
    description = 'Combine 1930s, 1940s, 1950s movie JSON files into one and remove duplicates.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.example.demo.util.CombineMovies'
}
